<resources>
    <string name="app_name">Aviators Hub</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="google_login">Google Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_facebook">Login Facebook</string>
    <string name="welcome_to_aviators_hub">Welcome To Aviators Hub</string>
    <string name="log_out">Log Out</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="chats">Chats</string>

    <string name="facebook_app_id">431493334593187</string>
    <string name="fb_login_protocol_scheme">fb431493334593187</string>

</resources>