<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_height="35dp"
        android:inputType="textEmailAddress"
        android:hint="@string/full_name"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_height="35dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_height="35dp"
        android:inputType="phone"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        app:backgroundTint="@color/colorButton" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15sp"
            android:paddingLeft="7dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingStart="7dp"
            android:paddingEnd="10dp" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>

</LinearLayout>