<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/ic_back"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginTop="105dp"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_height="35dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/username"
        android:drawableStart="@drawable/username"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        android:text="@string/submit"
        app:backgroundTint="@color/colorButton" />

</LinearLayout>