<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginTop="105dp"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/username" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:drawableLeft="@drawable/password"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        app:backgroundTint="@color/colorButton" />
    <Button
        android:id="@+id/btnLoginFacebook"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        android:text="Login Facebook"
        app:backgroundTint="@color/colorButton" />
    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        android:text="Google Login"
        app:backgroundTint="@color/colorButton" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="15sp"
            android:paddingLeft="7dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot password?"
        android:layout_marginTop="2dp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>

</LinearLayout>